--- a/CurveChart_Tucheng_NTP.html
+++ b/CurveChart_Tucheng_NTP.html
@@ -79,7 +79,7 @@
 
     <!-- Footer -->
     <footer>
-        Made with ❤️ by <a href="https://github.com/anan442" target="_blank">anan442</a>
+        Made by <a href="https://github.com/anan442" target="_blank">anan442</a>
     </footer>
 
 </body>
