--- a/CurveChart_Tucheng_NTP.html
+++ b/CurveChart_Tucheng_NTP.html
@@ -74,7 +74,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <iframe src="https://github.com/anan442/Data_design/raw/main/CurveChart_Tucheng_NTP.html"></iframe>
+        <iframe src="https://plotdb.io/v/chart/37118" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
     </div>
 
     <!-- Footer -->
