--- a/CurveChart_Tucheng_NTP.html
+++ b/CurveChart_Tucheng_NTP.html
@@ -18,13 +18,13 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 15px 20px;
+            padding: 20px;
             text-align: center;
         }
 
         header h1 {
             margin: 0;
-            font-size: 24px;
+            font-size: 32px; /* Larger title */
         }
 
         /* Footer styles */
@@ -32,11 +32,11 @@
             background-color: #222;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
+            font-size: 14px;
             position: fixed;
             bottom: 0;
             width: 100%;
-            font-size: 14px;
         }
 
         footer a {
@@ -50,18 +50,18 @@
 
         /* Main content area */
         .content {
-            padding: 20px;
-            max-width: 1600px;
+            padding: 40px 10px;
+            max-width: 90%; /* Wider content */
             margin: 0 auto;
         }
 
         /* Responsive iframe */
         iframe {
             width: 100%;
-            height: 600px;
+            height: 800px; /* Increased height */
             border: none;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Bold shadow */
         }
     </style>
 </head>
@@ -74,7 +74,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <iframe src="https://plotdb.io/v/chart/37118" allowfullscreen="true" frameborder="0"></iframe>
+        <iframe src="https://github.com/anan442/Data_design/raw/main/CurveChart_Tucheng_NTP.html"></iframe>
     </div>
 
     <!-- Footer -->
