--- a/CurveChart_Tucheng_NTP.html
+++ b/CurveChart_Tucheng_NTP.html
@@ -34,8 +34,7 @@
             text-align: center;
             padding: 15px 0;
             font-size: 14px;
-            position: fixed;
-            bottom: 0;
+            position: relative; /* Changed from fixed to relative */
             width: 100%;
         }
 
@@ -53,6 +52,7 @@
             padding: 40px 10px;
             max-width: 90%; /* Wider content */
             margin: 0 auto;
+            margin-bottom: 50px; /* Added space between content and footer */
         }
 
         /* Responsive iframe */
