--- a/CurveChart_Tucheng_NTP.html
+++ b/CurveChart_Tucheng_NTP.html
@@ -34,7 +34,8 @@
             text-align: center;
             padding: 15px 0;
             font-size: 14px;
-            position: relative; /* Changed from fixed to relative */
+            position: fixed;
+            bottom: 0;
             width: 100%;
         }
 
@@ -52,7 +53,6 @@
             padding: 40px 10px;
             max-width: 90%; /* Wider content */
             margin: 0 auto;
-            margin-bottom: 50px; /* Added space between content and footer */
         }
 
         /* Responsive iframe */
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+CONTENT 跟 FOOTER要有一點距離
