--- a/NTP_population_Dec24.html
+++ b/NTP_population_Dec24.html
@@ -4,6 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NTP City Population -Dec.2024</title>
+    <style>
+        /* Reset styles */
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        /* Header styles */
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 32px; /* Larger title */
+        }
+
+        /* Footer styles */
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 15px 0;
+            font-size: 14px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Main content area */
+        .content {
+            padding: 40px 10px;
+            max-width: 90%; /* Wider content */
+            margin: 0 auto;
+        }
+
+        /* Responsive iframe */
+        iframe {
+            width: 100%;
+            height: 800px; /* Increased height */
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Bold shadow */
+        }
+    </style>
 </head>
 <body>
     <h1>動畫式的新北市村里級熱圖，透過點擊縣市中的鄉鎮再顯示村里細節。</h1>
