--- a/NTP_population_Dec24.html
+++ b/NTP_population_Dec24.html
@@ -66,7 +66,10 @@
     </style>
 </head>
 <body>
-    <h1>動畫式的新北市村里級熱圖，透過點擊縣市中的鄉鎮再顯示村里細節。</h1>
-    <iframe src="https://plotdb.io/v/chart/37205" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
+    <header>
+        <h1>動畫式的新北市村里級熱圖，透過點擊縣市中的鄉鎮再顯示村里細節。</h1>
+    </header>
+    
+    <iframe src="https://plotdb.io/v/chart/37205" allowfullscreen="true" frameborder="0"></iframe>
 </body>
 </html>
