--- a/a1113362_0429test.html
+++ b/a1113362_0429test.html
@@ -49,75 +49,50 @@
 </head>
 <body>
     <header>
-        <h1>🧓 新北市113年12月高齡人口趨勢分析報告（65歲以上）</h1>
+        <h1>新北市113年12月高齡人口趨勢分析報告（65歲以上）</h1>
     </header>
 
     <main>
-        <!-- 第一部分：人口結構現況 -->
+        
         <section>
-            <h2>一、人口結構現況</h2>
-            <p>65至100歲總人口數：約為 <strong>768,492人</strong></p>
-            <p>65至79歲人口數：約為 <strong>636,279人</strong>，佔整體高齡人口 <strong>82.79%</strong></p>
-            <p>80歲以上人口數：約為 <strong>132,213人</strong>，佔整體高齡人口 <strong>17.21%</strong></p>
-            <p>📈 從年齡分佈來看，新北市高齡化以「初老族群（65-79歲）」為主，這類族群通常仍具備一定的身心機能與生活自主性。但80歲以上的高齡族群比例也逐步上升，意味著未來10-20年將面臨超高齡社會的重大壓力，屆時80歲以上長者將成為照護與醫療服務的核心對象。</p>
+            <h2>圖表一：新北市65歲以上人口分布</h2>
+            <iframe src="https://plotdb.io/v/chart/37330" allowfullscreen="true"></iframe>
         </section>
 
-        <!-- 第二部分：地區差異觀察 -->
         <section>
-            <h2>二、地區差異觀察</h2>
+            <h2>圖表二：新北市各區65歲以上人口比例</h2>
+            <iframe src="https://plotdb.io/v/chart/37335" allowfullscreen="true"></iframe>
+        </section>
+        
+        <section>
+            <h2>人口結構</h2>
+            <p>65至79歲人口約 <strong>636,279人</strong>，佔整體高齡人口 <strong>82.79%</strong></p>
+            <p>80歲以上人口約 <strong>132,213人</strong>，佔整體高齡人口 <strong>17.21%</strong></p>
+        </section>
+
+        <section>
+            <h2>圖表分析</h2>
             <p><strong>人口最多地區：</strong>板橋區、高機能生活圈（如新店、中和、新莊）高齡人口比例高，特別集中於65-74歲族群，顯示這些區域具備醫療便利性、交通網絡及社區照顧基礎。</p>
             <p><strong>人口較少地區：</strong>平溪區、烏來區、雙溪區等地，因地理偏遠、交通不便與年輕人口外移，整體高齡人口數偏低，但這也造成老化程度更嚴重，需特別強化基礎照護資源。</p>
-            <p>🔍 此分布特徵說明：「高齡人口多 ≠ 高齡化程度高」，偏鄉或高齡化村里其實面臨更大的人力與照護資源短缺問題。</p>
         </section>
 
-        <!-- 第三部分：政策建議 -->
         <section>
-            <h2>三、政策建議</h2>
+            <h2>未來可能的準備方向</h2>
             <ul>
-                <li><strong>活化初老族群：</strong>
+                <li><strong>超高齡照護準備</strong>
                     <ul>
-                        <li>推動「銀髮再就業」、「社區志工平台」與「終身學習課程」</li>
-                        <li>設立65歲以上社區健康促進站，預防退化與延緩失能</li>
+                        <li>擴大社區整合型服務中心、日間照顧中心等長照資源</li>
                     </ul>
                 </li>
-                <li><strong>超高齡照護準備：</strong>
+                <li><strong>偏鄉照護</strong>
                     <ul>
-                        <li>建置「在地老化」友善環境，強化居家醫療與喘息服務</li>
-                        <li>擴大社區整合型服務中心（C級據點）、日間照顧中心等長照資源</li>
-                    </ul>
-                </li>
-                <li><strong>科技與偏鄉照護：</strong>
-                    <ul>
-                        <li>發展「遠距健康監測」與「智慧照護系統」普及到偏鄉</li>
                         <li>設立巡迴醫療隊，解決烏來、雙溪等地高齡者就醫不便問題</li>
                     </ul>
                 </li>
             </ul>
         </section>
 
-        <!-- 第四部分：未來展望 -->
-        <section>
-            <h2>四、未來展望</h2>
-            <p>📌 以80歲為壽命平均門檻推估，未來20年內，新北市將迎來一波「80歲以上高齡人口潮」，高齡者將占據醫療、照護與社會福利的主體。</p>
-            <p>🧭 政府與地方社區應提早布局，包括：</p>
-            <ul>
-                <li>打造「高齡友善城市」：改善無障礙空間、長者友善公園與交通</li>
-                <li>培育長照人力與照護者支持系統</li>
-                <li>推行跨代共融社區，減緩高齡孤立現象</li>
-            </ul>
-        </section>
 
-        <!-- 圖表一 -->
-        <section>
-            <h2>圖表一：新北市65歲以上人口分布</h2>
-            <iframe src="https://plotdb.io/v/chart/37330" allowfullscreen="true"></iframe>
-        </section>
-
-        <!-- 圖表二 -->
-        <section>
-            <h2>圖表二：新北市各區65歲以上人口比例</h2>
-            <iframe src="https://plotdb.io/v/chart/37335" allowfullscreen="true"></iframe>
-        </section>
     </main>
 </body>
 </html>
