--- a/a1113362_0429test.html
+++ b/a1113362_0429test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新北市113年12月人口統計圖表－65歲以上</title>
     <style>
+        /* 全域樣式 */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -36,7 +37,7 @@
         }
         iframe {
             width: 100%;
-            height: 600px;
+            height: 400px;
             border: none;
             border-radius: 4px;
         }
@@ -48,6 +49,33 @@
         }
         strong {
             color: #005b99; /* 重點文字深藍色 */
+        }
+
+        /* 響應式設計 */
+        @media (max-width: 768px) {
+            header {
+                font-size: 18px;
+                padding: 15px;
+            }
+            section {
+                padding: 15px;
+            }
+            iframe {
+                height: 300px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                font-size: 16px;
+                padding: 10px;
+            }
+            section {
+                padding: 10px;
+            }
+            iframe {
+                height: 250px;
+            }
         }
     </style>
 </head>
