--- a/a1113362_0429test.html
+++ b/a1113362_0429test.html
@@ -117,12 +117,12 @@
             <ul>
                 <li><strong>超高齡照護準備</strong>
                     <ul>
-                        <li>擴大社區整合型服務中心、日間照顧中心等長照資源</li>
+                        擴大社區整合型服務中心、日間照顧中心等長照資源
                     </ul>
                 </li>
                 <li><strong>偏鄉照護</strong>
                     <ul>
-                        <li>設立巡迴醫療隊，解決烏來、雙溪等地高齡者就醫不便問題</li>
+                        設立巡迴醫療隊，解決烏來、雙溪等地高齡者就醫不便問題
                     </ul>
                 </li>
             </ul>
