--- a/a1113362_0429test.html
+++ b/a1113362_0429test.html
@@ -148,13 +148,13 @@
     <main>
         <!-- 圖表一 -->
         <section>
-            <h2>圖表一：新北市65歲以上人口分布</h2>
+            <h2>新北市65歲以上人口分布</h2>
             <iframe src="https://plotdb.io/v/chart/37330" allowfullscreen="true"></iframe>
         </section>
 
         <!-- 圖表二 -->
         <section>
-            <h2>圖表二：新北市各區65歲以上人口比例</h2>
+            <h2>新北市各區65歲以上人口比例</h2>
             <iframe src="https://plotdb.io/v/chart/37335" allowfullscreen="true"></iframe>
         </section>
         
