--- a/65uppopu_ntp_0506.html
+++ b/65uppopu_ntp_0506.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新北市113年12月人口統計圖表－65歲以上</title>
+    <title>新北市113年12月人口熱力圖</title>
     <style>
         /* 全域樣式 */
         body {
@@ -141,8 +141,8 @@
 </head>
 <body>
     <header>
-        <h1>新北市 113 年 12 月高齡人口趨勢分析報告</h1>
-        <p>聚焦 65 歲以上人口變化，洞察未來可能的挑戰與機遇</p>
+        <h1>新北市 113 年 12 月人口熱力圖</h1>
+        <p>聚焦 65 歲以上人口變化</p>
     </header>
 
     <main>
@@ -187,6 +187,12 @@
                     </ul>
                 </li>
             </ul>
+        </section>
+        
+        <!-- 集點子計畫 -->
+        <section>
+            <h2>集點子計畫</h2>
+            
         </section>
     </main>
 </body>
