--- a/65uppopu_ntp_0506.html
+++ b/65uppopu_ntp_0506.html
@@ -189,10 +189,32 @@
             </ul>
         </section>
         
-        <!-- 集點子計畫 -->
+                <!-- 集點子計畫 -->
         <section>
             <h2>集點子計畫</h2>
-            
+            <p>
+                隨著高齡化社會的來臨，許多長者在退休後面臨情感孤單與陪伴缺乏的困境。以新北市為例，高齡人口已接近三成，對社交與陪伴的需求日益迫切。
+            </p>
+            <p>
+                為解決這一問題，我提出 <strong>「樂齡社區旅遊團」</strong> 構想，通過社區定期舉辦小型旅遊，邀請周邊長者參加，藉此促進人際交流與情感支持。
+            </p>
+            <ul>
+                <li><strong>活動特色：</strong>
+                    <ul>
+                        <li>設計適合長者的輕鬆行程，考慮身心需求，提供友善的交通與設施。</li>
+                        <li>專業引導員提供旅遊資訊，並鼓勵長者分享生活經驗，建立新的社交網絡。</li>
+                    </ul>
+                </li>
+                <li><strong>回憶紀錄：</strong>
+                    <ul>
+                        <li>每次旅程後，設有回憶紀錄環節，讓長者透過照片、文字或手工藝記錄旅行中的美好瞬間。</li>
+                        <li>定期舉辦回顧展，增強自我實現感與歸屬感。</li>
+                    </ul>
+                </li>
+            </ul>
+            <p>
+                這不僅是一場簡單的出遊，而是一個長期性的情感支持機制，旨在讓高齡者享受更豐富的晚年生活。
+            </p>
         </section>
     </main>
 </body>
