--- a/65uppopu_ntp_0506.html
+++ b/65uppopu_ntp_0506.html
@@ -189,7 +189,7 @@
             </ul>
         </section>
         
-                <!-- 集點子計畫 -->
+        <!-- 集點子計畫 -->
         <section>
             <h2>集點子計畫</h2>
             <p>
@@ -215,6 +215,7 @@
             <p>
                 這不僅是一場簡單的出遊，而是一個長期性的情感支持機制，旨在讓高齡者享受更豐富的晚年生活。
             </p>
+            <img src="your-image-url-here.jpg" alt="樂齡社區旅遊團活動" style="max-width:100%; height:auto; margin-top:20px; border-radius:8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
         </section>
     </main>
 </body>
