--- a/65uppopu_ntp_0506.html
+++ b/65uppopu_ntp_0506.html
@@ -215,8 +215,7 @@
             <p>
                 這不僅是一場簡單的出遊，而是一個長期性的情感支持機制，旨在讓高齡者享受更豐富的晚年生活。
             </p>
-            <img src="https://github.com/anan442/Data_design/main/a1113362_0506.jpg" alt="樂齡社區旅遊團活動" style="max-width:100%; height:auto; margin-top:20px; border-radius:8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-        </section>
+<img src="https://raw.githubusercontent.com/anan442/Data_design/main/a1113362_0506.jpg" alt="樂齡社區旅遊團活動" style="max-width:100%; height:auto; margin-top:20px; border-radius:8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">        </section>
     </main>
 </body>
 </html>
